--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
 
+    compile 'com.android.support:design:23.0.1'
 }
