--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.android.support:percent:23.3.0'
 
 //    compile 'com.github.ozodrukh:CircularReveal:1.3.1@aar'
     compile 'com.github.ozodrukh:CircularReveal:1.3.1'
