--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:percent:23.3.0'
+    compile 'com.android.support:design:23.2.0'
 
 //    compile 'com.github.ozodrukh:CircularReveal:1.3.1@aar'
     compile 'com.github.ozodrukh:CircularReveal:1.3.1'
