--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,5 +42,8 @@ dependencies {
     compile 'com.github.ozodrukh:CircularReveal:1.3.1'
     compile 'com.bowyer.app:fabtransitionlayout:0.3.0@aar'
 
+    compile 'org.osmdroid:osmdroid-android:5.1@aar'
+    compile 'org.osmdroid:osmdroid-third-party:5.0.1@aar'
+
     compile project(':infrastructure')
 }
