--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,13 +32,13 @@ dependencies {
     compile 'com.android.support:cardview-v7:23.0.+'
     compile 'com.android.support:recyclerview-v7:+'
     compile 'com.android.support:design:23.0.1'
+    compile 'com.android.support:support-v4:23.4.0'
     compile 'com.google.android.gms:play-services:8.1.0'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.android.support:percent:23.3.0'
     compile 'com.android.support:design:23.2.0'
 
-//    compile 'com.github.ozodrukh:CircularReveal:1.3.1@aar'
     compile 'com.github.ozodrukh:CircularReveal:1.3.1'
     compile 'com.bowyer.app:fabtransitionlayout:0.3.0@aar'
 
