--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <!-- <permission android:name=".MAPS_RECEIVE" android:protectionLevel="signature"></permission> -->
+    <!-- Protect the map component of the application using application signature -->
+    <!--<permission  android:name="in.wptrafficanalyzer.locationsearchdialogv2.permission.MAPS_RECEIVE" android:protectionLevel="signature" />-->
+    <!-- Allows to receive map -->
+    <!--<uses-permission android:name="in.wptrafficanalyzer.locationsearchdialogv2.permission.MAPS_RECEIVE" />-->
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
+
+    <!-- Allows to contact Google Serves -->
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+    <!-- Google Maps Android API V2 requires OpenGL ES version 2 -->
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -41,6 +48,9 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
         <meta-data
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_key" />
+        <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
         <meta-data
@@ -48,25 +58,21 @@
             android:value="@integer/google_play_services_version" />
 
         <activity
+            android:launchMode="singleTop"
             android:name=".MainMenuActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
+
             <meta-data android:name="android.app.searchable" android:resource="@xml/searchable"/>
+            <!-- Points to searchable activity -->
+            <meta-data android:name="android.app.default_searchable" android:value=".MainActivity" />
+
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH" />
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-        </activity>
-        <activity
-            android:name=".ui.activities.HistoryTracksActivity"
-            android:label="@string/title_activity_history_tracks"
-            android:parentActivityName=".MainMenuActivity"
-            android:theme="@style/AppTheme.NoActionBar">
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="svp.com.dontmissplaces.MainMenuActivity" />
         </activity>
 
         <service
@@ -81,6 +87,20 @@
         </service>
         <!-- <service android:name="svp.com.opengpstracker.util.BreadcrumbsService" /> -->
 
+         <provider
+            android:name=".model.Map.google.PlaceProvider"
+            android:authorities="svp.com.dontmissplaces.model.Map.google.PlaceProvider"
+            android:exported="false" />
+
+        <activity
+            android:name=".ui.activities.HistoryTracksActivity"
+            android:label="@string/title_activity_history_tracks"
+            android:parentActivityName=".MainMenuActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="svp.com.dontmissplaces.MainMenuActivity" />
+        </activity>
         <activity
             android:name=".ui.activities.SaveTrackActivity"
             android:label="@string/title_activity_save_track"
