--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.WRITE_SETTINGS"/>
+    <uses-permission android:name="android.permission.WRITE_SECURE_SETTINGS"/>
     <!-- Protect the map component of the application using application signature -->
     <!-- <permission  android:name="in.wptrafficanalyzer.locationsearchdialogv2.permission.MAPS_RECEIVE" android:protectionLevel="signature" /> -->
     <!-- Allows to receive map -->
