--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -137,7 +137,15 @@
                 android:name="android.app.default_searchable"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".ui.activities.CrashActivity"></activity>
+        <activity android:name=".ui.activities.CrashActivity">
+            <intent-filter>
+                <action android:name="com.scytec.datamobile.vd.gui.android.AppPreferenceActivity" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainMenuActivity" />
+        </activity>
     </application>
 
 </manifest>
