--- a/appmap/build.gradle
+++ b/appmap/build.gradle
@@ -29,4 +29,6 @@ dependencies {
     compile 'com.github.MKergall:osmbonuspack:v5.8.1'
 
     compile 'com.google.android.gms:play-services:8.1.0'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
 }
