--- a/appmap/build.gradle
+++ b/appmap/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     compile 'com.google.android.gms:play-services:8.1.0'
 
     compile 'com.jakewharton:butterknife:7.0.1'
+
+    compile project(':infrastructure')
 }
