--- a/appmap/build.gradle
+++ b/appmap/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.0.1'
     compile 'com.android.support:design:23.2.0'
     compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.google.android.gms:play-services:8.1.0'
 
     compile 'org.osmdroid:osmdroid-android:5.1@aar'
     compile 'com.github.MKergall:osmbonuspack:v5.8.1'
