--- a/dontmissstation/build.gradle
+++ b/dontmissstation/build.gradle
@@ -23,12 +23,13 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
 
-
     compile project(path: ':infrastructure')
     compile project(':appmap')
-    compile 'com.android.support:appcompat-v7:23.4.0'
-    compile 'com.android.support:design:23.4.0'
-    compile 'com.android.support:support-v4:23.4.0'
+    compile 'com.android.support:appcompat-v7:23.4.+'
+    compile 'com.android.support:design:23.4.+'
+    compile 'com.android.support:support-v4:23.4.+'
+    compile 'com.android.support:cardview-v7:23.0.+'
+    compile 'com.android.support:recyclerview-v7:+'
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'com.google.android.gms:play-services:9.0.0'
 }
