--- a/dontmissstation/src/main/AndroidManifest.xml
+++ b/dontmissstation/src/main/AndroidManifest.xml
@@ -34,14 +34,22 @@
             android:name=".ui.activities.SettingsActivity"
             android:label="@string/title_activity_settings" />
 
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+        <!-- <meta-data -->
+        <!-- android:name="com.google.android.geo.API_KEY" -->
+        <!-- android:value="@string/google_maps_key" /> -->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_key" />
 
-        <activity android:name=".ui.activities.AddNewSubwayActivity"></activity>
+        <activity
+            android:name=".ui.activities.AddNewSubwayActivity"
+            android:label="@string/title_activity_add_new_subway"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="svp.com.dontmissstation.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
