add line actv dnms

--- a/dontmissstation/src/main/AndroidManifest.xml
+++ b/dontmissstation/src/main/AndroidManifest.xml
@@ -50,6 +50,15 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="svp.com.dontmissstation.MainActivity" />
         </activity>
+        <activity
+            android:name=".ui.activities.AddSubwayLineActivity"
+            android:label="@string/title_activity_add_subway_line"
+            android:parentActivityName=".MainActivity"
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="svp.com.dontmissstation.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
