--- a/dontmissstation/build.gradle
+++ b/dontmissstation/build.gradle
@@ -25,11 +25,7 @@ dependencies {
 
     compile project(path: ':infrastructure')
     compile project(':appmap')
-    compile 'com.android.support:appcompat-v7:23.4.+'
-    compile 'com.android.support:design:23.4.+'
-    compile 'com.android.support:support-v4:23.4.+'
-    compile 'com.android.support:cardview-v7:23.0.+'
-    compile 'com.android.support:recyclerview-v7:+'
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'com.google.android.gms:play-services:9.0.0'
+
+    compile 'com.github.QuadFlask:colorpicker:0.0.11'
 }
+
