--- a/infrastructure/build.gradle
+++ b/infrastructure/build.gradle
@@ -25,9 +25,16 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.android.support:appcompat-v7:+'
+    compile 'com.android.support:design:+'
+    compile 'com.android.support:support-v4:+'
+    compile 'com.android.support:percent:+'
+    compile 'com.android.support:cardview-v7:+'
+    compile 'com.android.support:recyclerview-v7:+'
+    compile 'com.google.android.gms:play-services:+'
+
+    compile 'com.jakewharton:butterknife:7.0.1'
+
     compile 'com.j256.ormlite:ormlite-core:4.48'
     compile 'com.j256.ormlite:ormlite-android:4.48'
-
-    compile 'com.android.support:design:23.2.0'
 }
