--- a/dontmissstation/src/main/AndroidManifest.xml
+++ b/dontmissstation/src/main/AndroidManifest.xml
@@ -26,7 +26,6 @@
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -66,7 +65,11 @@
         <activity
             android:name=".ui.activities.ListSubwaysActivity"
             android:label="@string/title_activity_list_subways"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="svp.com.dontmissstation.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
