--- a/dontmissstation/src/main/AndroidManifest.xml
+++ b/dontmissstation/src/main/AndroidManifest.xml
@@ -1,17 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="svp.com.dontmissstation">
+    package="svp.com.dontmissstation" >
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
-
     <uses-permission android:name="com.example.androidmapsv2.permission.MAPS_RECEIVE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
@@ -22,18 +19,22 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
+
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
-            <meta-data android:name="android.app.searchable"
-                android:resource="@xml/searchable"/>
+
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".ui.activities.SettingsActivity"
@@ -50,7 +51,7 @@
             android:name=".ui.activities.EditSubwayScrollingActivity"
             android:label="@string/title_activity_edit_subway_scrolling"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="svp.com.dontmissstation.MainActivity" />
@@ -59,7 +60,7 @@
             android:name=".ui.activities.EditSubwayLineScrollingActivity"
             android:label="@string/title_activity_edit_subway_line_scrolling"
             android:parentActivityName=".ui.activities.EditSubwayScrollingActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="svp.com.dontmissstation.ui.activities.EditSubwayScrollingActivity" />
@@ -71,15 +72,19 @@
         <activity
             android:name=".ui.activities.ListSubwaysActivity"
             android:label="@string/title_activity_list_subways"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="svp.com.dontmissstation.MainActivity" />
         </activity>
-
         <activity
             android:name=".ui.activities.PickOnMapActivity"
-            android:label="@string/title_activity_pick_on_map"></activity>
+            android:label="@string/title_activity_pick_on_map" />
+        <activity
+            android:name=".ui.activities.RouteScrollingActivity"
+            android:label="@string/title_activity_route_scrolling"
+            android:theme="@style/AppTheme.NoActionBar" >
+        </activity>
     </application>
 
 </manifest>
