--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ infrastructure/infrastructure.iml
 app/app.iml
 .idea/misc.xml
 dontmissstation/src/debug/res/values/google_maps_api.xml
+dontmissstation/src/debug/res/google_maps_api.xml
